@@ -229,17 +229,18 @@
        behaviour change of <code class="fsharp"><span class="ci">System</span><span class="cm">.</span><span class="ci">Double</span><span
        class="cm">.</span><span class="ci">Parse</span></code> on .NET Core 3</a>.
       </li>
-      <li class="_2">
+      <li class="_2">Enrico Sada modernized the F# and C# project files and the build script for the NuGet packages – thanks Enrico!</li>
+      <li class="_3">
        Fixed a bug in the Low‐Trust version of the <code class="fsharp"><a href="../reference/charstream.html#CharStream"><span
        class="ci">CharStream</span></a></code> constructors that accept a file path argument: The stream’s <code class="fsharp"><a
        href="../reference/charstream.html#CharStream.members.Name"><span class="ci">Name</span></a></code> property wasn’t initialized. Maxime Didier
        reported this bug and <a href="https://github.com/stephan-tolksdorf/fparsec/pull/20">provided a fix</a> – thanks Maxime!
       </li>
-      <li class="_3">
+      <li class="_4">
        Fixed missing parser definitions in the <a href="../tutorial.html#parsing-json">Parsing JSON</a> section of the tutorial spotted by Josh
        Quintus – thanks Josh!
       </li>
-      <li class="_4">
+      <li class="_5">
        <a href="https://github.com/stephan-tolksdorf/fparsec/pull/18">Fixed</a> a parser definition in the <a
        href="../users-guide/where-is-the-monad.html">Where is the monad</a> section of the User’s Guide found by Andre Wesseling – thanks Andre!
       </li>
