@@ -1,0 +1,48 @@
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+ <title>{title; text-only, no-number}</title>
+ <link rel="stylesheet" type="text/css" media="all" href="{html-output-dir}css/style.css" />
+ <link rel="stylesheet" type="text/css" media="screen" href="{html-output-dir}css/screen-sidebar.css" />
+ <!--[if lt IE 9]>
+ <link rel="stylesheet" type="text/css" media="all" href="{html-output-dir}css/style-ie.css" />
+ <![endif]-->
+ <!--[if IE 6]>
+ <link rel="stylesheet" type="text/css" media="all" href="{html-output-dir}css/style-ie6.css" />
+ <![endif]-->
+ <link rel="stylesheet" type="text/css" media="print" href="{html-output-dir}css/print.css" />
+</head>
+<body>
+ <div id="fixed-layer">
+ <div id="fixed-wrapper">
+ <div id="sidebar">
+  <div id="top-links"><span><a href="https://github.com/stephan-tolksdorf/fparsec">FParsec @ GitHub</a> | <a href="https://github.com/stephan-tolksdorf/fparsec/issues">Report a bug</a> | <a href="mailto:fparsec [at] quanttec.com?subject=FParsec&amp;body=Hi Stephan,%0A%0A[your feedback]">Feedback</a></span></div>
+  <div id="nav-tree">
+   {navigation-tree}
+  </div>
+  <div id="copyright">
+    <span>Copyright © 2017 <a href="{html-output-dir}about/contact.html">Stephan Tolksdorf</a></span>
+  </div>
+ </div>
+ </div>
+ </div>
+ <div id="wrapper">
+ <div id="main">
+ <div id="main-content">
+ <div id="breadcrumbs">
+  <span class="breadcrumbs">
+   {parent-section-short-titles;
+    prefix    = '<span id="breadcrumbs-parents">',
+    separator = '<span class="breadcrumbs-sep"> > </span>',
+    postfix   = '</span><span class="breadcrumbs-sep"> > </span>'
+   }{short-title; no-number}
+  </span>
+ </div>
+ {content}
+ </div>
+ </div>
+ </div>
+</body>
+</html>
+
